# CellularAutomata

./: .gitignore  ECA.m  README.md  pyproject.toml
docs/: conf.py  getting_started.rst  guide_eca.rst  guide_life.rst  guide_measures.rst  guide_stochastic.rst  index.rst  license.rst
docs/_static/: custom.css
docs/api/: pyCA.ca2d.rst  pyCA.eca.rst  pyCA.ica.rst  pyCA.measures.rst  pyCA.rst  pyCA.stochastic.rst
matlab/: ECA.m  ICA.m
pyCA/: __init__.py  ca2d.py  eca.py  ica.py  measures.py  stochastic.py
tests/: test_pyCA.py
