[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCA"
version = "0.1.0"
description = "Cellular automata and their information content"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Damian R Sowinski", email = "drsowinski@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/EternalTime/CellularAutomata"
Documentation = "https://damiansowinski.com/pyCA/"

[tool.setuptools.packages.find]
include = ["pyCA*"]
